# domers

./: .gitignore  Cargo.toml  Makefile  README.md
.cursor/rules/: update-docs.mdc
.github/workflows/: ci.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: beat.rs  color.rs  config.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  scheduler.rs
crates/inputs/: Cargo.toml  README.md
crates/inputs/src/: audio.rs  lib.rs  link.rs  madmom.rs  midi.rs  orientation.rs
crates/outputs/: Cargo.toml
crates/outputs/src/: commands.rs  lib.rs  opc.rs  topology.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/visualizers/: Cargo.toml  README.md
crates/visualizers/src/: buffer.rs  color_util.rs  diagnostics.rs  geometry.rs  hash.rs  input.rs  inventory.rs  lib.rs  math.rs  quaternion.rs  render.rs  rng.rs
crates/visualizers/src/dome/: flash.rs  mod.rs  paintbrush.rs  quaternion.rs  race.rs  radial.rs  snakes.rs  splat.rs  tv_static.rs  volume.rs
crates/visualizers/src/runtime/: flash.rs  mod.rs  paintbrush.rs  quaternion_multi.rs  race.rs  radial.rs  snakes.rs  splat.rs  strut_iteration.rs  tv_static.rs  volume.rs
crates/visualizers/src/tests/: mod.rs
docker/ci/: README.md
docs/: architecture.md  configuration.md  fixture-capture.md  hardware-mapping.md  hardware-readiness.md  intentional-deviations.md  parity-closure.md  porting-inventory.md  testing.md  ui-expectations.md
examples/: bench_frame.rs  domers.toml
fixtures/: README.md  manifest.json
fixtures/madmom/: valid-and-invalid.txt
fixtures/orientation/: datagram_lengths.json
fixtures/spectrum-csharp/: visualizer_frame_cases.json  visualizer_sequence_cases.json
scripts/: apply_visualizer_fixes.py  fix_visualizers_post.py  pub_crate_visualizers.py  rebuild_visualizer_split.sh  split_server.py  split_visualizers.py  split_visualizers_v2.py
src/: main.rs
tests/: config_cli.rs  no_hardware_e2e.rs
tests/integration/: no_hardware_e2e.rs
tools/: build_spectrum_csharp.py  capture_spectrum_visualizer_frames.py  check_visualizer_goldens.py  extract_spectrum_fixtures.py
ui/: build-html.mjs  check.mjs  index.html  main.mjs  package.json  simulator.html  tsconfig.json
ui/src/: main.tsx  styles.css
