[workspace]
members = [
  "crates/core",
  "crates/engine",
  "crates/outputs",
  "crates/inputs",
  "crates/visualizers",
  "crates/server",
  "crates/test-support",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/campmindshark/domers"
rust-version = "1.80"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
