[workspace]
members = [
  "crates/core",
  "crates/engine",
  "crates/outputs",
  "crates/inputs",
  "crates/visualizers",
  "crates/server",
  "crates/test-support",
]
resolver = "2"

[package]
name = "domers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
domers-core = { path = "crates/core" }
domers-inputs = { path = "crates/inputs" }
domers-outputs = { path = "crates/outputs" }
domers-server = { path = "crates/server" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/campmindshark/dome-rs"
rust-version = "1.80"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[lints]
workspace = true
