[package]
name = "domers-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
domers-core = { path = "../core" }
domers-outputs = { path = "../outputs" }
domers-visualizers = { path = "../visualizers" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }

[lints]
workspace = true
