[package]
name = "domers-visualizers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
domers-core = { path = "../core" }
domers-outputs = { path = "../outputs" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints]
workspace = true

[dev-dependencies]
